--- a/index.css
+++ b/index.css
@@ -31,6 +31,16 @@
 .table {
   border: black solid 3px;
 }
+.table {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.table td,.table th {
+  vertical-align: middle;
+  text-align: center;
+}
 
 .table thead {
   border: black solid 3px;
