--- a/index.css
+++ b/index.css
@@ -37,10 +37,10 @@
   text-align: center;
 }
 
-.table td,.table th {
+/* .table td,.table th {
   vertical-align: middle;
   text-align: center;
-}
+} */
 
 .table thead {
   border: black solid 3px;
